src/app/app.component.scss
@import '~@angular/material/theming';
@import "../custom-theme";

:host {
  height: 100vh;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  flex-direction: column;
}

md-sidenav-container {
  height: 100vh;

  &.mat-sidenav-container {
    background-color: mat-color($app-primary, lighter);

  }

}

md-sidenav-container /deep/ .mat-sidenav-content {
  overflow: hidden;
}

md-sidenav {
  height: 100vh;
  width: 20vw;
}

.app-content {
  height: calc(100vh - 64px);
  overflow: auto;
}

.mat-list-item {
  a {
    padding-left: 1em;
    padding-right: 1em;
    cursor: pointer;
  }

  &.active {
    font-weight: 600;
    color: mat-color($app-primary);
  }
}

